...
        android:onClick="scrollPhotos"
        android:text=""
        app2:layout_constraintEnd_toEndOf="parent"
        app2:layout_constraintTop_toBottomOf="@+id/tvTimestamp" />

    <Button
        android:id="@+id/editbutton"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="60dp"
        android:background="@color/colorPrimaryDark"
        android:onClick="goToEdit"
...
